// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ManageRestrictedJoinRuleDialog /> should list spaces which are not parents of the room 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ManageRestrictedJoinRuleDialog"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Select spaces
      </h1>
    </div>
    <p>
      <span>
        Decide which spaces can access this room. If a space is selected, its members can find and join 
        <strong>
          !roomId:server
        </strong>
        .
      </span>
    </p>
    <div
      class="mx_SearchBox mx_textinput"
    >
      <input
        autocomplete="off"
        class="mx_textinput_icon mx_textinput_search mx_textinput_icon mx_textinput_search"
        data-testid="searchbox-input"
        placeholder="Search spaces"
        type="text"
        value=""
      />
      <div
        class="mx_AccessibleButton mx_SearchBox_closeButton"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ManageRestrictedJoinRuleDialog_content"
      tabindex="-1"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section"
      >
        <h3>
          Other spaces you know
        </h3>
        <div
          class="mx_ManageRestrictedJoinRuleDialog_entry"
        >
          <form
            class="_root_19upo_16"
          >
            <div
              class="_inline-field_19upo_32"
            >
              <div
                class="_inline-field-control_19upo_44"
              >
                <div
                  class="_container_1md5v_10"
                >
                  <input
                    aria-describedby="_r_5_"
                    class="_input_1md5v_18"
                    id="checkbox_vY7Q4uEh9K"
                    type="checkbox"
                  />
                  <div
                    class="_ui_1md5v_19"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="_inline-field-body_19upo_38"
              >
                <label
                  class="_label_19upo_59"
                  for="checkbox_vY7Q4uEh9K"
                >
                  <div>
                    <span
                      class="_avatar_zysgz_8 mx_BaseAvatar _avatar-imageless_zysgz_55"
                      data-color="1"
                      data-testid="avatar-img"
                      data-type="round"
                      role="none"
                      style="--cpd-avatar-size: 20px;"
                    >
                      O
                    </span>
                    <span
                      class="mx_ManageRestrictedJoinRuleDialog_entry_name"
                    >
                      Other Space
                    </span>
                  </div>
                </label>
                <span
                  class="_message_19upo_85 _help-message_19upo_91"
                  id="_r_5_"
                >
                  0 members
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="mx_ManageRestrictedJoinRuleDialog_footer"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section_info"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16v-4a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 11a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 12v4q0 .424.287.712.288.288.713.288m0-8q.424 0 .713-.287A.97.97 0 0 0 13 8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8q0 .424.287.713Q11.576 9 12 9m0 13a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
        You're removing all spaces. Access will default to invite only
      </div>
      <div
        class="mx_ManageRestrictedJoinRuleDialog_footer_buttons"
      >
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
          role="button"
          tabindex="0"
        >
          Confirm
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
        />
      </svg>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`<ManageRestrictedJoinRuleDialog /> should render empty state 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ManageRestrictedJoinRuleDialog"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Select spaces
      </h1>
    </div>
    <p>
      <span>
        Decide which spaces can access this room. If a space is selected, its members can find and join 
        <strong>
          !roomId:server
        </strong>
        .
      </span>
    </p>
    <div
      class="mx_SearchBox mx_textinput"
    >
      <input
        autocomplete="off"
        class="mx_textinput_icon mx_textinput_search mx_textinput_icon mx_textinput_search"
        data-testid="searchbox-input"
        placeholder="Search spaces"
        type="text"
        value=""
      />
      <div
        class="mx_AccessibleButton mx_SearchBox_closeButton"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </div>
    <div
      class="mx_AutoHideScrollbar mx_ManageRestrictedJoinRuleDialog_content"
      tabindex="-1"
    >
      <span
        class="mx_ManageRestrictedJoinRuleDialog_noResults"
      >
        No results
      </span>
    </div>
    <div
      class="mx_ManageRestrictedJoinRuleDialog_footer"
    >
      <div
        class="mx_ManageRestrictedJoinRuleDialog_section_info"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16v-4a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 11a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 12v4q0 .424.287.712.288.288.713.288m0-8q.424 0 .713-.287A.97.97 0 0 0 13 8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8q0 .424.287.713Q11.576 9 12 9m0 13a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
          />
        </svg>
        You're removing all spaces. Access will default to invite only
      </div>
      <div
        class="mx_ManageRestrictedJoinRuleDialog_footer_buttons"
      >
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary_outline"
          role="button"
          tabindex="0"
        >
          Cancel
        </div>
        <div
          class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
          role="button"
          tabindex="0"
        >
          Confirm
        </div>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
        />
      </svg>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
